alignment fix

--- a/static/style.scss
+++ b/static/style.scss
@@ -126,11 +126,12 @@ body {
         right: 0px;
         top: 0px;
         padding: 6px;
-        text-align:left;
+        text-align:right;
         width:100%;
 
         a{
             text-decoration: none;
+            text-align: left;
             overflow: hidden;
             width: 100%;
 
